--- a/index.html
+++ b/index.html
@@ -6,48 +6,200 @@
 <title>平安夜快乐 🎄</title>
 
 <style>
-html, body { margin:0; padding:0; height:100%; overflow:hidden; font-family:"PingFang SC","Microsoft YaHei",sans-serif; background: linear-gradient(180deg, #ff9a9e, #fad0c4); color:#fff; }
-body::after { content:""; position:fixed; inset:0; background:radial-gradient(circle at center,rgba(255,255,255,0.18),rgba(255,255,255,0) 60%); animation:glow 6s ease-in-out infinite; pointer-events:none; }
-@keyframes glow {0%,100%{opacity:.4;}50%{opacity:.7;}}
-.bg-tree {position:absolute; bottom:-40px; left:50%; transform:translateX(-50%); font-size:320px; opacity:0.28; animation:treeMove 6s ease-in-out infinite; pointer-events:none;}
-@keyframes treeMove {0%,100%{transform:translateX(-50%) scale(1);}50%{transform:translateX(-50%) scale(1.06);}}
-.star {position:absolute; bottom:360px; left:50%; transform:translateX(-50%); font-size:48px; animation:starGlow 2.5s ease-in-out infinite;}
-@keyframes starGlow {0%,100%{opacity:0.6;transform:translateX(-50%) scale(1);}50%{opacity:1;transform:translateX(-50%) scale(1.25);}}
-.card {position:relative; z-index:10; width:88%; max-width:360px; margin:auto; top:50%; transform:translateY(-50%); text-align:center; padding:30px 22px; background:transparent; border-radius:22px; animation:float 4s ease-in-out infinite;}
-@keyframes float {0%,100%{transform:translateY(-50%) translateY(0);}50%{transform:translateY(-50%) translateY(-14px);}}
-h1 {font-size:24px; margin-bottom:10px;}
-.name {font-size:20px; margin-bottom:6px; animation:heartbeat 2.4s infinite;}
-@keyframes heartbeat {0%,100%{transform:scale(1); text-shadow:0 0 6px rgba(255,255,255,.4);}50%{transform:scale(1.08); text-shadow:0 0 16px rgba(255,255,255,.9);}}
-.message {position:absolute; font-size:16px; white-space:nowrap; animation:rise 3s ease-out forwards; pointer-events:none;}
-@keyframes rise {0%{opacity:0; transform:translateY(10px) scale(0.95);}25%{opacity:1;}100%{opacity:0; transform:translateY(-140px) scale(1.08);}}
-.heart-burst {position:absolute; font-size:20px; animation:burst 1.3s ease-out forwards; pointer-events:none;}
-@keyframes burst {0%{transform:scale(0.3);opacity:1;}100%{transform:translate(var(--x), var(--y)) scale(1.4) rotate(360deg); opacity:0;}}
-.spark {position:absolute; font-size:12px; opacity:.8; animation:sparkFly 1.6s linear forwards; pointer-events:none;}
-@keyframes sparkFly {to{transform:translate(var(--sx), var(--sy)); opacity:0;}}
-.snow {position:absolute; top:-10px; font-size:14px; animation:snowFall linear infinite;}
-@keyframes snowFall {to{transform:translateY(110vh);}}
-#tip{position:fixed; top:20px; width:100%; text-align:center; font-size:18px; color:#fff; z-index:20;}
-video{position:fixed; inset:0; width:100%; height:100%; object-fit:cover; opacity:0.25;}
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+    font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
+    background: linear-gradient(180deg, #ff9a9e, #fad0c4);
+    color: #fff;
+}
+
+/* 背景柔光呼吸 */
+body::after {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: radial-gradient(circle at center,
+        rgba(255,255,255,0.18),
+        rgba(255,255,255,0) 60%);
+    animation: glow 6s ease-in-out infinite;
+    pointer-events: none;
+}
+
+@keyframes glow {
+    0%,100% { opacity: .4; }
+    50% { opacity: .7; }
+}
+
+/* 巨型圣诞树 */
+.bg-tree {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 320px;
+    opacity: 0.28;
+    animation: treeMove 6s ease-in-out infinite;
+    pointer-events: none;
+}
+
+@keyframes treeMove {
+    0%,100% { transform: translateX(-50%) scale(1); }
+    50% { transform: translateX(-50%) scale(1.06); }
+}
+
+/* 星星 */
+.star {
+    position: absolute;
+    bottom: 360px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 48px;
+    animation: starGlow 2.5s ease-in-out infinite;
+}
+
+@keyframes starGlow {
+    0%,100% { opacity: 0.6; transform: translateX(-50%) scale(1); }
+    50% { opacity: 1; transform: translateX(-50%) scale(1.25); }
+}
+
+/* 主卡片 */
+.card {
+    position: relative;
+    z-index: 10;
+    width: 88%;
+    max-width: 360px;
+    margin: auto;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    padding: 30px 22px;
+    background: transparent;
+    border-radius: 22px;
+    box-shadow: none;
+    backdrop-filter: none;
+    animation: float 4s ease-in-out infinite;
+}
+
+@keyframes float {
+    0%,100% { transform: translateY(-50%) translateY(0); }
+    50% { transform: translateY(-50%) translateY(-14px); }
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+/* 名字：心跳感 */
+.name {
+    font-size: 20px;
+    margin-bottom: 6px;
+    animation: heartbeat 2.4s infinite;
+}
+
+@keyframes heartbeat {
+    0%,100% {
+        transform: scale(1);
+        text-shadow: 0 0 6px rgba(255,255,255,.4);
+    }
+    50% {
+        transform: scale(1.08);
+        text-shadow: 0 0 16px rgba(255,255,255,.9);
+    }
+}
+
+/* 情话 */
+.message {
+    position: absolute;
+    font-size: 16px;
+    white-space: nowrap;
+    animation: rise 3s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes rise {
+    0% { opacity: 0; transform: translateY(10px) scale(0.95); }
+    25% { opacity: 1; }
+    100% { opacity: 0; transform: translateY(-140px) scale(1.08); }
+}
+
+/* 爱心爆炸 */
+.heart-burst {
+    position: absolute;
+    font-size: 20px;
+    animation: burst 1.3s ease-out forwards;
+    pointer-events: none;
+}
+
+@keyframes burst {
+    0% { transform: scale(0.3); opacity: 1; }
+    100% {
+        transform: translate(var(--x), var(--y)) scale(1.4) rotate(360deg);
+        opacity: 0;
+    }
+}
+
+/* 星光粒子 */
+.spark {
+    position: absolute;
+    font-size: 12px;
+    opacity: .8;
+    animation: sparkFly 1.6s linear forwards;
+    pointer-events: none;
+}
+
+@keyframes sparkFly {
+    to {
+        transform: translate(var(--sx), var(--sy));
+        opacity: 0;
+    }
+}
+
+/* 雪 */
+.snow {
+    position: absolute;
+    top: -10px;
+    font-size: 14px;
+    animation: snowFall linear infinite;
+}
+
+@keyframes snowFall {
+    to { transform: translateY(110vh); }
+}
+
+/* 摄像头提示 */
+#tip{
+    position: fixed;
+    top: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    z-index: 20;
+}
 </style>
 </head>
+
 <body>
 <div class="bg-tree">🎄</div>
 <div class="star">⭐</div>
+
 <div class="card">
     <h1>平安夜快乐</h1>
     <div class="name">To 小左 💕</div>
 </div>
-<div id="tip">👇 点击屏幕启动手势</div>
+
+<div id="tip">👇 点一下屏幕启动手势交互</div>
+
 <audio id="bgm" loop>
     <source src="https://cdn.pixabay.com/audio/2022/12/05/audio_5a7c3f9db8.mp3">
 </audio>
 
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
-
 <script>
-// ---------------- 雪花 & 点击动画 ----------------
+// ---------------- 原点击动画 ----------------
 const messages = [
     "小左，我好像越来越离不开你了",
     "靠你近一点，心就乱一点 💗",
@@ -59,87 +211,140 @@ const messages = [
     "小左，你能不能别走"
 ];
 
-document.addEventListener("click", e=>{
-    const bgm = document.getElementById("bgm"); if(bgm.paused) bgm.play();
-    const msg=document.createElement("div"); msg.className="message";
-    msg.innerText=messages[Math.floor(Math.random()*messages.length)];
-    msg.style.left=e.clientX+"px"; msg.style.top=e.clientY+"px";
-    document.body.appendChild(msg); setTimeout(()=>msg.remove(),3000);
-    for(let i=0;i<14;i++){ const h=document.createElement("div"); h.className="heart-burst"; h.innerText="💖"; h.style.left=e.clientX+"px"; h.style.top=e.clientY+"px";
-    h.style.setProperty("--x",(Math.random()*180-90)+"px"); h.style.setProperty("--y",(Math.random()*180-90)+"px"); document.body.appendChild(h); setTimeout(()=>h.remove(),1300);}
-    for(let i=0;i<8;i++){ const s=document.createElement("div"); s.className="spark"; s.innerText="✨"; s.style.left=e.clientX+"px"; s.style.top=e.clientY+"px";
-    s.style.setProperty("--sx",(Math.random()*120-60)+"px"); s.style.setProperty("--sy",(Math.random()*120-60)+"px"); document.body.appendChild(s); setTimeout(()=>s.remove(),1600);}
+document.addEventListener("click", e => {
+    const bgm = document.getElementById("bgm");
+    if (bgm.paused) bgm.play();
+
+    // 情话
+    const msg = document.createElement("div");
+    msg.className = "message";
+    msg.innerText = messages[Math.floor(Math.random()*messages.length)];
+    msg.style.left = e.clientX + "px";
+    msg.style.top = e.clientY + "px";
+    document.body.appendChild(msg);
+    setTimeout(()=>msg.remove(),3000);
+
+    // 爱心
+    for(let i=0;i<14;i++){
+        const h=document.createElement("div");
+        h.className="heart-burst";
+        h.innerText="💖";
+        h.style.left=e.clientX+"px";
+        h.style.top=e.clientY+"px";
+        h.style.setProperty("--x",(Math.random()*180-90)+"px");
+        h.style.setProperty("--y",(Math.random()*180-90)+"px");
+        document.body.appendChild(h);
+        setTimeout(()=>h.remove(),1300);
+    }
+
+    // 星光
+    for(let i=0;i<8;i++){
+        const s=document.createElement("div");
+        s.className="spark";
+        s.innerText="✨";
+        s.style.left=e.clientX+"px";
+        s.style.top=e.clientY+"px";
+        s.style.setProperty("--sx",(Math.random()*120-60)+"px");
+        s.style.setProperty("--sy",(Math.random()*120-60)+"px");
+        document.body.appendChild(s);
+        setTimeout(()=>s.remove(),1600);
+    }
 });
 
+// 雪花
 setInterval(()=>{
-    const snow=document.createElement("div"); snow.className="snow"; snow.innerText="❄️";
+    const snow=document.createElement("div");
+    snow.className="snow";
+    snow.innerText="❄️";
     snow.style.left=Math.random()*window.innerWidth+"px";
     snow.style.fontSize=(Math.random()*10+10)+"px";
     snow.style.animationDuration=(Math.random()*5+5)+"s";
-    document.body.appendChild(snow); setTimeout(()=>snow.remove(),10000);
+    document.body.appendChild(snow);
+    setTimeout(()=>snow.remove(),10000);
 },350);
 
-// ---------------- 手势识别 ----------------
-const video = document.createElement('video'); video.autoplay=true; video.playsInline=true;
+// ---------------- 手势交互 ----------------
+const video = document.createElement('video');
+video.autoplay = true;
+video.playsInline = true;
 
-function createHearts(){for(let i=0;i<12;i++){const h=document.createElement("div"); h.className="heart-burst"; h.innerText="💖";
-h.style.left=Math.random()*window.innerWidth+"px"; h.style.top=Math.random()*window.innerHeight+"px";
-h.style.setProperty("--x",Math.random()*200-100); h.style.setProperty("--y",Math.random()*200-100);
-document.body.appendChild(h); setTimeout(()=>h.remove(),1400);}}
+const gestureCanvas = document.createElement('canvas');
+const gestureCtx = gestureCanvas.getContext('2d');
+gestureCanvas.width = 80;
+gestureCanvas.height = 60;
 
-function createSparks(){for(let i=0;i<10;i++){const s=document.createElement("div"); s.className="spark"; s.innerText="✨";
-s.style.left=Math.random()*window.innerWidth+"px"; s.style.top=Math.random()*window.innerHeight+"px";
-s.style.setProperty("--sx",Math.random()*120-60); s.style.setProperty("--sy",Math.random()*120-60);
-document.body.appendChild(s); setTimeout(()=>s.remove(),1600);}
+let gestureCooldown = false;
 
-// 初始化 MediaPipe Hands
-const hands = new Hands({locateFile:(file)=>`https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`});
-hands.setOptions({maxNumHands:1,modelComplexity:1,minDetectionConfidence:0.7,minTrackingConfidence:0.7});
+function createHearts(){
+    for(let i=0;i<12;i++){
+        const h=document.createElement("div");
+        h.className="heart-burst";
+        h.innerText="💖";
+        h.style.left=Math.random()*window.innerWidth+"px";
+        h.style.top=Math.random()*window.innerHeight+"px";
+        h.style.setProperty("--x",Math.random()*200-100);
+        h.style.setProperty("--y",Math.random()*200-100);
+        document.body.appendChild(h);
+        setTimeout(()=>h.remove(),1400);
+    }
+}
 
-hands.onResults(results=>{
-    if(!results.multiHandLandmarks || results.multiHandLandmarks.length===0) return;
-    const landmarks = results.multiHandLandmarks[0];
-    // 简单手势判断：张开手掌/握拳/比心
-    const thumb_tip = landmarks[4], index_tip = landmarks[8], middle_tip=landmarks[12];
-    const ring_tip = landmarks[16], pinky_tip=landmarks[20];
-    const wrist = landmarks[0];
+function createSparks(){
+    for(let i=0;i<10;i++){
+        const s=document.createElement("div");
+        s.className="spark";
+        s.innerText="✨";
+        s.style.left=Math.random()*window.innerWidth+"px";
+        s.style.top=Math.random()*window.innerHeight+"px";
+        s.style.setProperty("--sx",Math.random()*120-60);
+        s.style.setProperty("--sy",Math.random()*120-60);
+        document.body.appendChild(s);
+        setTimeout(()=>s.remove(),1600);
+    }
+}
 
-    function distance(a,b){return Math.hypot(a.x-b.x,a.y-b.y);}
-    const palm_size = distance(wrist, middle_tip);
+// 手势检测（简单亮度变化）
+function detectHandGesture(){
+    gestureCtx.drawImage(video, 0,0,gestureCanvas.width,gestureCanvas.height);
+    const frame = gestureCtx.getImageData(0,0,gestureCanvas.width,gestureCanvas.height).data;
 
-    // 判断张开手掌
-    const fingers_extended = [index_tip,middle_tip,ring_tip,pinky_tip].filter(f=>distance(f,wrist)/palm_size>0.5).length;
-    if(fingers_extended>=4){ createHearts(); return; } // 张开手掌
-    // 判断握拳
-    if(fingers_extended<=1){ createSparks(); return; } // 握拳
-    // 比心手势（食指+中指伸直，其他弯曲）
-    if(fingers_extended===2){ showRandomMessage(); return; }
-});
+    let sum = 0;
+    for(let i=0;i<frame.length;i+=4){ sum += frame[i]; }
+    const avg = sum / (gestureCanvas.width*gestureCanvas.height);
 
-// 启动摄像头 + Hands camera
-let camera=null;
-function startCamera(){
-    navigator.mediaDevices.getUserMedia({video:{facingMode:"user"}}).then(stream=>{
-        video.srcObject=stream;
-        video.play();
+    if(!gestureCooldown){
+        if(avg < 50){ // 张开手掌
+            createHearts();
+            gestureCooldown = true;
+            setTimeout(()=>gestureCooldown=false,1200);
+        } else if(avg > 180){ // 握拳
+            createSparks();
+            gestureCooldown = true;
+            setTimeout(()=>gestureCooldown=false,1200);
+        }
+    }
+
+    requestAnimationFrame(detectHandGesture);
+}
+
+// 启动摄像头
+async function startCamera(){
+    try{
+        const stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"}});
+        video.srcObject = stream;
+        await video.play();
         document.getElementById('tip').innerText="✋ 把手放到摄像头前试试";
-        camera = new Camera(video,{onFrame:async()=>{await hands.send({image:video});},width:640,height:480});
-        camera.start();
-    }).catch(e=>alert("摄像头启动失败"));
+        detectHandGesture();
+    }catch(e){
+        alert("摄像头启动失败");
+        console.error(e);
+    }
 }
 
-// 显示情话
-function showRandomMessage(){
-    const msg=document.createElement("div"); msg.className="message";
-    msg.innerText=messages[Math.floor(Math.random()*messages.length)];
-    msg.style.left=window.innerWidth/2+"px";
-    msg.style.top=window.innerHeight/2+"px";
-    document.body.appendChild(msg);
-    setTimeout(()=>msg.remove(),3000);
-}
-
-// 点击启动
-document.body.addEventListener("click",()=>{startCamera();}, {once:true});
+// 用户点击启动手势
+document.body.addEventListener("click",()=>{
+    startCamera();
+}, {once:true});
 </script>
 </body>
 </html>
