--- a/index.html
+++ b/index.html
@@ -2,304 +2,119 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
+<title>炫酷手势交互</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>平安夜快乐 🎄</title>
 
 <style>
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-    font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
+html,body{
+  margin:0;
+  padding:0;
+  overflow:hidden;
+  background:black;
+  font-family:sans-serif;
+  touch-action:none;
 }
 
-/* 背景 */
-body {
-    background: linear-gradient(180deg, #ff9a9e, #fad0c4);
-    color: #fff;
+#tip{
+  position:fixed;
+  top:20px;
+  width:100%;
+  text-align:center;
+  color:#00ffea;
+  font-size:18px;
+  z-index:10;
 }
 
-/* 背景柔光呼吸 */
-body::after {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background: radial-gradient(circle at center,
-        rgba(255,255,255,0.18),
-        rgba(255,255,255,0) 60%);
-    animation: glow 6s ease-in-out infinite;
-    pointer-events: none;
+video{display:none}
+
+.particle{
+  position:absolute;
+  font-size:18px;
+  pointer-events:none;
+  animation:fly 1.5s linear forwards;
 }
 
-@keyframes glow {
-    0%,100% { opacity: .4; }
-    50% { opacity: .7; }
-}
-
-/* 巨型圣诞树 */
-.bg-tree {
-    position: absolute;
-    bottom: -40px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 320px;
-    opacity: 0.28;
-    animation: treeMove 6s ease-in-out infinite;
-    pointer-events: none;
-}
-
-@keyframes treeMove {
-    0%,100% { transform: translateX(-50%) scale(1); }
-    50% { transform: translateX(-50%) scale(1.06); }
-}
-
-/* 星星 */
-.star {
-    position: absolute;
-    bottom: 360px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 48px;
-    animation: starGlow 2.5s ease-in-out infinite;
-}
-
-@keyframes starGlow {
-    0%,100% { opacity: 0.6; transform: translateX(-50%) scale(1); }
-    50% { opacity: 1; transform: translateX(-50%) scale(1.25); }
-}
-
-/* 主卡片 */
-.card {
-    position: relative;
-    z-index: 10;
-    width: 88%;
-    max-width: 360px;
-    margin: auto;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-    padding: 30px 22px;
-    background: transparent;
-    border-radius: 22px;
-    box-shadow: none;
-    backdrop-filter: none;
-    animation: float 4s ease-in-out infinite;
-}
-
-@keyframes float {
-    0%,100% { transform: translateY(-50%) translateY(0); }
-    50% { transform: translateY(-50%) translateY(-14px); }
-}
-
-h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-/* 名字：心跳感 */
-.name {
-    font-size: 20px;
-    margin-bottom: 6px;
-    animation: heartbeat 2.4s infinite;
-}
-
-@keyframes heartbeat {
-    0%,100% {
-        transform: scale(1);
-        text-shadow: 0 0 6px rgba(255,255,255,.4);
-    }
-    50% {
-        transform: scale(1.08);
-        text-shadow: 0 0 16px rgba(255,255,255,.9);
-    }
-}
-
-/* 情话 */
-.message {
-    position: absolute;
-    font-size: 16px;
-    white-space: nowrap;
-    animation: rise 3s ease-out forwards;
-    pointer-events: none;
-}
-
-@keyframes rise {
-    0% { opacity: 0; transform: translateY(10px) scale(0.95); }
-    25% { opacity: 1; }
-    100% { opacity: 0; transform: translateY(-140px) scale(1.08); }
-}
-
-/* 爱心爆炸 */
-.heart-burst {
-    position: absolute;
-    font-size: 20px;
-    animation: burst 1.3s ease-out forwards;
-    pointer-events: none;
-}
-
-@keyframes burst {
-    0% { transform: scale(0.3); opacity: 1; }
-    100% {
-        transform: translate(var(--x), var(--y)) scale(1.4) rotate(360deg);
-        opacity: 0;
-    }
-}
-
-/* 星光粒子 */
-.spark {
-    position: absolute;
-    font-size: 12px;
-    opacity: .8;
-    animation: sparkFly 1.6s linear forwards;
-    pointer-events: none;
-}
-
-@keyframes sparkFly {
-    to {
-        transform: translate(var(--sx), var(--sy));
-        opacity: 0;
-    }
-}
-
-/* 雪 */
-.snow {
-    position: absolute;
-    top: -10px;
-    font-size: 14px;
-    animation: snowFall linear infinite;
-}
-
-@keyframes snowFall {
-    to { transform: translateY(110vh); }
+@keyframes fly{
+  from{opacity:1; transform:scale(0.6);}
+  to{
+    opacity:0;
+    transform:translate(calc(var(--x)*1px), calc(var(--y)*1px)) scale(1.4) rotate(360deg);
+  }
 }
 </style>
 </head>
 
 <body>
-
-<div class="bg-tree">🎄</div>
-<div class="star">⭐</div>
-
-<div class="card">
-    <h1>平安夜快乐</h1>
-    <div class="name">To 小左 💕</div>
-</div>
-
-<audio id="bgm" loop>
-    <source src="https://cdn.pixabay.com/audio/2022/12/05/audio_5a7c3f9db8.mp3">
-</audio>
-
-<video id="video" playsinline autoplay muted style="display:none;"></video>
-<canvas id="canvas" width="80" height="60" style="display:none;"></canvas>
+<div id="tip">👇 点一下屏幕，然后对着镜头挥动手掌 ✋</div>
+<video id="video" playsinline autoplay muted></video>
+<canvas id="canvas"></canvas>
 
 <script>
-// 情话数组
-const messages = [
-    "小左，我好像越来越离不开你了",
-    "靠你近一点，心就乱一点 💗",
-    "如果可以，我想一直这样陪着你",
-    "你在的时候，我什么都不想要",
-    "今晚有点甜，大概是你在我心里",
-    "我好像开始习惯你了",
-    "平安夜，只想被你抱紧",
-    "小左，你能不能别走"
-];
-
-// 获取元素
+const tip = document.getElementById("tip");
 const video = document.getElementById("video");
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
-const tip = document.querySelector(".card h1");
+
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
 let started = false;
 let lastFrame = null;
 
-// 创建爱心
-function createHearts(x,y){
-    for(let i=0;i<14;i++){
-        const h=document.createElement("div");
-        h.className="heart-burst";
-        h.innerText="💖";
-        h.style.left=x+"px";
-        h.style.top=y+"px";
-        h.style.setProperty("--x",(Math.random()*180-90)+"px");
-        h.style.setProperty("--y",(Math.random()*180-90)+"px");
-        document.body.appendChild(h);
-        setTimeout(()=>h.remove(),1300);
-    }
+// 生成粒子效果
+function createParticles(count=15){
+  for(let i=0;i<count;i++){
+    const p=document.createElement("div");
+    p.className="particle";
+    p.innerText="✨";
+    p.style.left=Math.random()*window.innerWidth+"px";
+    p.style.top=Math.random()*window.innerHeight+"px";
+    p.style.setProperty("--x",Math.random()*300-150);
+    p.style.setProperty("--y",Math.random()*300-150);
+    p.style.color=`hsl(${Math.random()*360},100%,70%)`;
+    document.body.appendChild(p);
+    setTimeout(()=>p.remove(),1500);
+  }
 }
 
-// 创建情话
-function createMessage(x,y){
-    const msg = document.createElement("div");
-    msg.className = "message";
-    msg.innerText = messages[Math.floor(Math.random()*messages.length)];
-    msg.style.left = x + "px";
-    msg.style.top = y + "px";
-    document.body.appendChild(msg);
-    setTimeout(()=>msg.remove(),3000);
+// 检测画面变化（手势靠近）
+function detectMotion(){
+  ctx.drawImage(video,0,0,canvas.width,canvas.height);
+  const frame=ctx.getImageData(0,0,canvas.width,canvas.height).data;
+  
+  if(lastFrame){
+    let diff=0;
+    for(let i=0;i<frame.length;i+=16){
+      diff+=Math.abs(frame[i]-lastFrame[i]);
+    }
+    if(diff>1500){ // 调节灵敏度
+      tip.innerText="🌟 手势触发特效！";
+      createParticles(20);
+    }
+  }
+  lastFrame=frame;
+  requestAnimationFrame(detectMotion);
 }
 
-// 手势检测（张开/握拳）
-function detectGesture(){
-    if(!video.videoWidth) return;
-
-    // 缩小画布做计算
-    ctx.drawImage(video,0,0,canvas.width,canvas.height);
-    const frame = ctx.getImageData(0,0,canvas.width,canvas.height).data;
-
-    let sum = 0;
-    for(let i=0;i<frame.length;i+=4){
-        sum += frame[i]+frame[i+1]+frame[i+2]; // RGB亮度
-    }
-
-    // 面积大小比例，简单区分张开/握拳
-    const area = sum / frame.length;
-
-    if(area > 60){ // 张开手
-        tip.innerText = "🎄 平安夜快乐！";
-        createHearts(window.innerWidth/2, window.innerHeight/2);
-    } else if(area > 20){ // 握拳
-        tip.innerText = "💌 给你一个拥抱";
-        createHearts(window.innerWidth/2, window.innerHeight/2);
-    }
-}
-
-// 启动摄像头
 async function startCamera(){
-    try{
-        const stream = await navigator.mediaDevices.getUserMedia({
-            video:{facingMode:"user"},
-            audio:false
-        });
-        video.srcObject = stream;
-        await video.play();
-        requestAnimationFrame(loop);
-    }catch(e){
-        alert("摄像头启动失败");
-        console.error(e);
-    }
+  try{
+    const stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"},audio:false});
+    video.srcObject = stream;
+    await video.play();
+    tip.innerText="✨ 对着镜头挥动手掌触发特效";
+    detectMotion();
+  }catch(e){
+    alert("摄像头启动失败");
+    console.error(e);
+  }
 }
 
-// 主循环
-function loop(){
-    detectGesture();
-    requestAnimationFrame(loop);
-}
-
-// 点击启动
+// 点击屏幕启动
 document.body.addEventListener("click",()=>{
-    if(started) return;
-    started = true;
-
-    // 播放背景音乐
-    const bgm = document.getElementById("bgm");
-    if(bgm.paused) bgm.play();
-
-    startCamera();
+  if(started) return;
+  started=true;
+  startCamera();
 });
 </script>
-
 </body>
 </html>
